# mlfc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  serverinterface.cpp  serverinterface.h
client/src/: CMakeLists.txt  client.cpp  client.h  cpu.cpp  cpu.h  enumerationstorage.h  fanmodemodel.cpp  fanmodemodel.h  gpu.cpp  gpu.h  main.cpp  serverinterface.h  serverstates.h
client/src/app/: .gitignore  CMakeLists.txt  appinfo.cpp  appinfo.h  client.cpp  client.h  client_config.h.in  cpu.cpp  cpu.h  gpu.cpp  gpu.h  main.cpp
client/src/app/model/: model.cpp  model.h  qmltempsfanspeeds.cpp  qmltempsfanspeeds.h
client/src/app/ui/: GraphControl.qml  MenuControl.qml  main.qml  qml.qrc
client/src/config/: CMakeLists.txt  config.cpp  config.h
client/src/constants/: CMakeLists.txt  constants.h  enumerationstorage.h
client/src/serverinterface/: CMakeLists.txt  serverinterface.cpp  serverinterface.h
client/src/ui/: GraphControl.qml  main.qml
client/test/config/: CMakeLists.txt  config.cpp
dbus/: com.github.mlfc.client.conf  com.github.mlfc.server.conf  com.github.mlfc.server.policy  com.github.mlfc.server.service  com.github.mlfc.server.xml
server/: .gitignore  CMakeLists.txt  server_info.h  server_info.h.in
server/src/: main.cpp  server.cpp  server.h  serveradapter.cpp  serveradapter.h
server/src/core/: constants.h  manager.cpp  manager.h  reader.cpp  reader.h
server/src/utils/: utils.h
